# entropical

./: CMakeLists.txt  FindOpenCL.cmake  amise.cpp  amise.hpp  autoent.cpp  autoent.hpp  boxed_search.cpp  boxed_search.hpp  boxedsearch.cpp  boxedsearch.hpp  dens.cpp  dens.hpp  densities.cpp  densities.hpp  densities_common.hpp  densities_common.hxx  densities_cuda.cu  densities_cuda.cu.bak  densities_cuda.hpp  densities_omp.cpp  densities_omp.hpp  densities_opencl.cpp  densities_opencl.hpp  density_1d.cuh  density_2d.cuh  density_3d.cuh  density_kernels.cpp  density_kernels.hpp  entropical.cpp  entropical.hpp  epa_conv.cuh  epanechnikov_omp.cpp  epanechnikov_omp.hpp  hestimate.cpp  hestimate.hpp  hestimate.hxx  im.cpp  im_help.cpp  im_help.hpp  kernels.cl  (+32 more)
doc/: makefile  md.bib  new.bib  paper.tex  stock.bib
julia_opencl/: minimal_opencl.jl  transs.jl
scripts/: plot_dens2d.py  plot_dens3d.py
